
= Java Plugin

== 2.3.0

* Added `Unknown` as default to list of java versions for concept `java:JavaVersion`

== 2.1.0

* Added attribute `column` to `@jQASuppress` annotation to allow specifying a non-primary column to be evaluated

== 2.0.4

* Reverted `DEPENDS_ON_PACKAGE` and `DEPENDS_ON_ARTIFACT` relations to `DEPENDS_ON` for the concepts `java:PackageDependency` and `java:ArtifactDependency`

== 2.0.0

* Added support for Java Records, i.e. types labeled with `:Type:Record`
* Renamed concepts and constraints
** `classpath:*` -> `java-classpath:*`
** `dependency:Package` -> `java:PackageDependency`
** `dependency:PackageCycle` -> `java:AvoidCyclicPackageDependencies`
** `dependency:Artifact` -> `java:ArtifactDependency`
** `dependency:ArtifactCycle` -> `java:AvoidCyclicArtifactDependencies`
* Migrated expensive Java concepts (e.g. `java:VirtualDependsOn`, `java-classpath:*`) to be executed in batches
* Fixed a problem for support of generic type variables (only last usage of the variable within a class was referenced e.g. for multiple declarations like `List<X>`)
* Upgraded ASM to 9.5 to enable support for Java 21 bytecode
* Removed `md5` property from `:Class` nodes

== 1.12.0

* Added support for invocations of method references and lambda methods, e.g. `(:Method)-[:INVOKES]->(:Lambda:Method)` (see https://github.com/jQAssistant/jqa-java-plugin/issues/35[issue])
* Improved calculation of cyclomatic complexity for Java class methods

== 1.10.1

* Upgraded to ASM 9.2 to support the scan of Java 18 bytecode

== 1.10.0

* Add support for generic types, e.g. `(:Field)-[OF_GENERIC_TYPE]->(:ParameterizedType)`
* Added concept `java:GeneratedType` which can be extended by project specific concepts using `providesConcept`
* Added a `reason` attribute to `@jQASuppress` to allow human-readable description for the suppression, e.g.
+
[source,java]
----
@jQASuppress(value = "my-rules:SuppressedRule", reason = "This rule does not apply here.")
public class MyClass { }